visual studios transfer

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <title></title>
+        <script src="script.js"></script>
+
     </head>
     <body>
-      //test oisin
-
+      <h1>Test</h1>
+      <p>Name</p>
+      <input type="text" id="name" />
+      <p>Password</p>
+      <input type="password" id="password" />
+      <button onclick="processDetails()">Click me!</button>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </body>
 </html>
