--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <h1>Test</h1>
       <p>Name</p>
-      <input type="text" id="name" />
+      <input type="text" id="username" />
       <p>Password</p>
       <input type="password" id="password" />
       <button onclick="processDetails()">Click me!</button>
