Tegan Links Commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <ul>
+          <li><a href="Webpages/home.html">Home</a></li>
+          <li><a href="Webpages/settings.html">Settings</a></li>
+          <li><a href="Webpages/contact.html">Profile</a></li>
+          <li><a href="Webpages/about.html">Ratings</a></li>
+          <li><a href="Webpages/about.html">Individual Chat</a></li>
+          <li><a href="Webpages/about.html">Connection after chat</a></li>
+          <li><a href="Webpages/about.html">Connections</a></li>
+          <li><a href="Webpages/about.html">Support Page</a></li>
+          <li><a href="Webpages/about.html">Support Chat</a></li>
+        </ul>
       <h1>Test</h1>
       <p>Name</p>
       <input type="text" id="username" />
