--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
           <li><a href="Webpages/settings.html">Settings</a></li>
           <li><a href="Webpages/contact.html">Profile</a></li>
           <li><a href="Webpages/about.html">Ratings</a></li>
-          <li><a href="Webpages/about.html">Individual Chat</a></li>
+          <li><a href="Webpages/individualchat.html">Individual Chat</a></li>
           <li><a href="Webpages/about.html">Connection after chat</a></li>
           <li><a href="Webpages/about.html">Connections</a></li>
           <li><a href="Webpages/about.html">Support Page</a></li>
-          <li><a href="Webpages/about.html">Support Chat</a></li>
+          <li><a href="Webpages/supportchat.html">Support Chat</a></li>
         </ul>
       <h1>Test</h1>
       <p>Name</p>
