Added Preferences to Index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="Webpages/about.html">Connections</a></li>
           <li><a href="Webpages/about.html">Support Page</a></li>
           <li><a href="Webpages/supportchat.html">Support Chat</a></li>
+          <li><a href="Webpages/preferences.html">Preferences</a></li>
               </ul>
       <h1>Test</h1>
       <p>Name</p>
