--- a/Webpages/Connections.html
+++ b/Webpages/Connections.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Profile</title>
+        <title>Connections</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
       //nah fam
