--- a/Webpages/preferences.html
+++ b/Webpages/preferences.html
@@ -9,7 +9,7 @@
     </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Covid Connect</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,13 +17,13 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="home.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="settings.html">Settings</a>
+        <a class="nav-link" href="profile.html">Profile</a>
         <a class="nav-link" href="connections.html">Connections</a>
         <a class="nav-link" href="rating.html">Rating</a>
         <a class="nav-link" href="individualchat.html">Individual Chat</a>
         <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
         <a class="nav-link" href="supportpage.html">Support Page</a>
         <a class="nav-link" href="supportchat.html">Support Chat</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
     </div>
   </nav>
