--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -15,15 +15,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="home.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="settings.html">Settings</a>
+        <a class="nav-link" href="supportpage.html">Support Page <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="home.html">Home</a>
         <a class="nav-link" href="profile.html">Profile</a>
         <a class="nav-link" href="connections.html">Connections</a>
+        <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
         <a class="nav-link" href="rating.html">Rating</a>
         <a class="nav-link" href="individualchat.html">Individual Chat</a>
-        <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
         <a class="nav-link" href="supportpage.html">Support Page</a>
         <a class="nav-link" href="supportchat.html">Support Chat</a>
+        <a class="nav-link" href="settings.html">Settings</a>
       </div>
     </div>
   </nav>
