--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="home.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="settings.html">Settings</a>
-            <a class="nav-link" href="connections.html">Connections</a>
-            <a class="nav-link" href="rating.html">Rating</a>
-            <a class="nav-link" href="individualchat.html">Individual Chat</a>
-            <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
-            <a class="nav-link" href="supportpage.html">Support Page</a>
-            <a class="nav-link" href="supportchat.html">Support Chat</a>
+            <a class="nav-link active" href="index.html">Login <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="Webpages/home.html">Home</a>
+            <a class="nav-link" href="Webpages/profile.html">Profile</a>
+            <a class="nav-link" href="Webpages/connections.html">Connections</a>
+            <a class="nav-link" href="Webpages/connectionafterchat.html">Connection after chat</a>
+            <a class="nav-link" href="Webpages/rating.html">Rating</a>
+            <a class="nav-link" href="Webpages/individualchat.html">Individual Chat</a>
+            <a class="nav-link" href="Webpages/supportpage.html">Support Page</a>
+            <a class="nav-link" href="Webpages/supportchat.html">Support Chat</a>
+            <a class="nav-link" href="Webpages/settings.html">Settings</a>
           </div>
         </div>
       </nav>
