--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="index.html">Login <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="Webpages/home.html">Home</a>
-            <a class="nav-link" href="Webpages/profile.html">Profile</a>
-            <a class="nav-link" href="Webpages/connections.html">Connections</a>
+            <a class="nav-link" href="Webpages/Profile.HTML">Profile</a>
+            <a class="nav-link" href="Webpages/Connections.html">Connections</a>
             <a class="nav-link" href="Webpages/connectionafterchat.html">Connection after chat</a>
             <a class="nav-link" href="Webpages/rating.html">Rating</a>
             <a class="nav-link" href="Webpages/individualchat.html">Individual Chat</a>
