--- a/Webpages/preferences.html
+++ b/Webpages/preferences.html
@@ -15,8 +15,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="home.html">Home</a>
-        <a class="nav-link" href="profile.html">Profile</a>
-        <a class="nav-link" href="connections.html">Connections</a>
+        <a class="nav-link" href="Profile.HTML">Profile</a>
+        <a class="nav-link" href="Connections.html">Connections</a>
         <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
         <a class="nav-link" href="rating.html">Rating</a>
         <a class="nav-link" href="individualchat.html">Individual Chat</a>
