--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Covid Connect</a>
-      <img src="logo.PNG" width="30" height="30" alt="" loading="lazy">
+      <img src="logo.PNG" width="100px" height="100px" alt="Logo" loading="lazy">
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
