--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Covid Connect</a>
-        <img src="logo.PNG" width="50px" height="50px" alt="Logo" loading="lazy">
+        <img src="logo.PNG" width="50px" height="50px" alt="Logo" loading="lazy" href="#" >
 
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
