--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="logo.PNG" width="50px" height="50px" alt="Logo" loading="lazy" href="#" >
-
+        <a class="navbar-brand" href="#">
+          <img src="logo.PNG" width="100px" height="100px" alt="Logo" loading="lazy">
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
