--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="logo.PNG" width="100px" height="100px" alt="Logo" loading="lazy">
+          <img src="logo.PNG" width="100px" height="100px" loading="lazy">
         </a>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
