--- a/Webpages/supportchat.html
+++ b/Webpages/supportchat.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href="../style.css" rel="stylesheet">
+
     </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
