--- a/Webpages/connectionafterchat.html
+++ b/Webpages/connectionafterchat.html
@@ -10,9 +10,10 @@
 
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Covid Connect</a>
-        <img src="logo.PNG" width="100px" height="100px" alt="Logo" loading="lazy">
+        <nav class="navbar navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+            <img src="logo.PNG" width="100px" height="100px" loading="lazy">
+          </a>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
