--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -10,24 +10,44 @@
 
     </head>
     <body>
-      <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="logo.PNG" width="100px" height="100px" loading="lazy">
-        </a>
-
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="home.html">Home</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Profile.HTML">Profile</a>
-            <a class="nav-link" href="Connections.html">Connections</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Connections.html">Connection</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
-            <a class="nav-link" href="rating.html">Rating</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="rating.html">Ratings</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="individualchat.html">Individual Chat</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="supportpage.html">Support Page</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="supportchat.html">Support Chat</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="settings.html">Settings</a>
-          </div>
-        </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
       </nav>
       Individual chat yo
     </body>
