--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -1,53 +1,173 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link href="../style.css" rel="stylesheet">
+<html lang="en">
+  <head>
+    <title>Individual Chat</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+      /* Set black background color, white text and some padding */
+      footer {
+        background-color: #555;
+        color: white;
+        padding: 15px;
+      }
+    </style>
+  </head>
+  <body>
 
-    </head>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Profile.HTML">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Connections.html">Connection</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="connectionafterchat.html">Connection after chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rating.html">Ratings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="individualchat.html">Individual Chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="supportpage.html">Support Page</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="supportchat.html">Support Chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="settings.html">Settings</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Covid Connect</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="Profile.HTML">Profile</a></li>
+            <li><a href="chatroulette.html">Chat Roulette</a></li>
+            <li><a href="Connections.html">Connections</a></li>
+            <li><a href="connectionafterchat.html">Connection after chat</a></li>
+            <li><a href="rating.html">Rating</a></li>
+            <li><a href="individualchat.html">Individual Chat</a></li>
+            <li><a href="supportpage.html">Support Page</a></li>
+            <li><a href="supportchat.html">Support Chat</a></li>
+            <li><a href="settings.html">Settings</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
 
-      Individual chat yo
-    </body>
-</html>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-sm-3 well">
+        <div class="well">
+          <p><a href="#">My Profile</a></p>
+          <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+        </div>
+        <div class="well">
+          <p><a href="#">Interests</a></p>
+          <p>
+            <span class="label label-default">News</span>
+            <span class="label label-primary">W3Schools</span>
+            <span class="label label-success">Labels</span>
+            <span class="label label-info">Football</span>
+            <span class="label label-warning">Gaming</span>
+            <span class="label label-danger">Friends</span>
+          </p>
+        </div>
+        <div class="alert alert-success fade in">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+          <p><strong>Ey!</strong></p>
+          People are looking at your profile. Find out who.
+        </div>
+        <p><a href="#">Link</a></p>
+        <p><a href="#">Link</a></p>
+        <p><a href="#">Link</a></p>
+      </div>
+      <div class="col-sm-7">
+
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="panel panel-default text-left">
+              <div class="panel-body">
+                <p contenteditable="true">Status: Feeling Blue</p>
+                <button type="button" class="btn btn-default btn-sm">
+                  <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p>John</p>
+             <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p>Bo</p>
+             <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p>Jane</p>
+             <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p>Anja</p>
+             <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-2 well">
+        <div class="thumbnail">
+          <p>Upcoming Events:</p>
+          <img src="paris.jpg" alt="Paris" width="400" height="300">
+          <p><strong>Paris</strong></p>
+          <p>Fri. 27 November 2015</p>
+          <button class="btn btn-primary">Info</button>
+        </div>
+        <div class="well">
+          <p>ADS</p>
+        </div>
+        <div class="well">
+          <p>ADS</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="container-fluid text-center">
+    <p>Footer Text</p>
+  </footer>
+
+  </body>
+  </html>
+
+        Individual chat yo
+      </body>
+  </html>
