--- a/index.html
+++ b/index.html
@@ -1,40 +1,80 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-      <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="logo.PNG" width="100px" height="100px" loading="lazy">
-        </a>
+<html lang="en">
+  <head>
+    <title>Login and Registration</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="../style.css" rel="stylesheet">
+  </head>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="index.html">Login <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="Webpages/home.html">Home</a>
-            <a class="nav-link" href="Webpages/Profile.HTML">Profile</a>
-            <a class="nav-link" href="Webpages/Connections.html">Connections</a>
-            <a class="nav-link" href="Webpages/connectionafterchat.html">Connection after chat</a>
-            <a class="nav-link" href="Webpages/rating.html">Rating</a>
-            <a class="nav-link" href="Webpages/individualchat.html">Individual Chat</a>
-            <a class="nav-link" href="Webpages/supportpage.html">Support Page</a>
-            <a class="nav-link" href="Webpages/supportchat.html">Support Chat</a>
-            <a class="nav-link" href="Webpages/settings.html">Settings</a>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Covid Connect</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a href="Webpages/home.html">Home</a></li>
+            <li><a href="Webpages/Profile.HTML">Profile</a></li>
+            <li><a href="Webpages/chatroulette.html">Chat Roulette</a></li>
+            <li><a href="Webpages/Connections.html">Connections</a></li>
+            <li><a href="Webpages/connectionafterchat.html">Connection after chat</a></li>
+            <li><a href="Webpages/rating.html">Rating</a></li>
+            <li><a href="Webpages/individualchat.html">Individual Chat</a></li>
+            <li><a href="Webpages/supportpage.html">Support Page</a></li>
+            <li><a href="Webpages/supportchat.html">Support Chat</a></li>
+            <li><a href="Webpages/settings.html">Settings</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid text-center">
+      <div class="row content">
+        <div class="col-sm-2 sidenav">
+          <p><a href="#">Link</a></p>
+          <p><a href="#">Link</a></p>
+          <p><a href="#">Link</a></p>
+        </div>
+        <div class="col-sm-8 text-left">
+          <h1>Login/Registration Page</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h1>Test</h1>
+          <p>Name</p>
+          <input type="text" id="username" />
+          <p>Password</p>
+          <input type="password" id="password" />
+          <button onclick="processDetails()">Click me!</button>
+          <script src="../script.js"></script>
+          <hr>
+          <h3>Test</h3>
+          <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-sm-2 sidenav">
+          <div class="well">
+            <p>ADS</p>
+          </div>
+          <div class="well">
+            <p>ADS</p>
           </div>
         </div>
-      </nav>
-      <h1>Test</h1>
-      <p>Name</p>
-      <input type="text" id="username" />
-      <p>Password</p>
-      <input type="password" id="password" />
-      <button onclick="processDetails()">Click me!</button>
-      <script src="../script.js"></script>
+      </div>
+    </div>
+    <footer class="container-fluid text-center">
+      <p>Covid Connect Footer</p>
+    </footer>
+  </body>
+</html>
     </body>
 </html>
