Improved design for connectionafterchat.html and rating.html

--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="../style.css" rel="stylesheet">
   </head>
 
@@ -42,23 +43,30 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-2">
-          <div class="well" style="margin-top:50px;">
-            <img src="../Imgs/PfpPlaceholder.png" width="30%" height="30%" style="text-align:center;"></img>
-            <p style="margin-top:10px;">Status:</p>
+        <div class="col-sm-12 text-center" style="padding:0px;">
+          <h1 style="text-decoration:underline; font-weight:bold;">Rate your chat!</h1>
+          <p>Please rate your conversation.</p>
+          <button style="">Rate Now!</button>
+          <p>Skip Rating<p>
+          <form action="">
+            <fieldset>
+              <div class="rating">
+                <input type="radio" name="rating" value="1" aria-label="1 star">
+                <input type="radio" name="rating" value="2" aria-label="2 star">
+                <input type="radio" name="rating" value="3" aria-label="3 star">
+                <input type="radio" name="rating" value="4" aria-label="4 star">
+                <input type="radio" name="rating" value="5" aria-label="5 star">
+              </div>
+            </fieldset>
+          </form>
+          <div class="well" style="margin-left:1%; width:25%; height:25%; margin-bottom:2%; float:left;">
+            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
             <h3>You</h3>
           </div>
-        </div>
-        <div class="col-sm-8 text-center">
-
-        </div>
-        <div class="col-sm-2">
-          <div class="well" style="margin-top:50px;">
-            <img src="../Imgs/PfpPlaceholder.png" width="30%" height="30%"></img>
-            <p style="margin-top:10px;">Status:</p>
+          <div class="well" style="margin-right:1%; width:25%; height:25%; margin-bottom:2%; float:right;">
+            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
             <h3>Other User</h3>
           </div>
-        </div>
       </div>
     </div>
     <footer class="container-fluid text-center">
