--- a/Webpages/connectionafterchat.html
+++ b/Webpages/connectionafterchat.html
@@ -42,24 +42,18 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-        </div>
-        <div class="col-sm-8 text-left">
-          <h1>Connections After Chat Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
-        </div>
-        <div class="col-sm-2 sidenav">
-          <div class="well">
-            <p>ADS</p>
+        <div class="col-sm-12 text-center" style="padding:0px;">
+          <h1 style="text-decoration:underline; font-weight:bold;">Connect with user?</h1>
+          <p>Would you like to connect with this user?</p>
+          <button>Connect Now!</button>
+          <button>Skip connection</button>          
+          <div class="well" style="margin-left:1%; width:25%; height:25%; margin-bottom:2%; float:left;">
+            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
+            <h3>You</h3>
           </div>
-          <div class="well">
-            <p>ADS</p>
+          <div class="well" style="margin-right:1%; width:25%; height:25%; margin-bottom:2%; float:right;">
+            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
+            <h3>Other User</h3>
           </div>
         </div>
       </div>
