Registration page done, Home page nearly done, settings page layout done

--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -36,9 +36,6 @@
             <li><a href="supportchat.html">Support Chat</a></li>
             <li><a href="settings.html">Settings</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          </ul>
         </div>
       </div>
     </nav>
@@ -119,16 +116,11 @@
         </div>
       </div>
       <!-- /.row -->
-
     </div>
     <!-- /.container -->
-
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-      </div>
-      <!-- /.container -->
+    <footer class="container-fluid text-center">
+      <p>Covid Connect Footer</p>
     </footer>
   </body>
 </html>
