--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="../style.css" rel="stylesheet">
+
+
     <style>
       /* Set black background color, white text and some padding */
       footer {
@@ -40,9 +43,6 @@
             <li><a href="supportpage.html">Support Page</a></li>
             <li><a href="supportchat.html">Support Chat</a></li>
             <li><a href="settings.html">Settings</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
         </div>
       </div>
