--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -3,33 +3,13 @@
   <head>
     <title>Settings Page</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="../style.css" rel="stylesheet">
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>  </head>
-    <head>
-
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
-
-      <title>Home Page</title>
-
-      <!-- Bootstrap core CSS -->
-      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-      <!-- Custom styles for this template -->
-      <link href="css/business-frontpage.css" rel="stylesheet">
-
-    </head>
-
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+     <link href="../style.css" rel="stylesheet">
+   </head>
     <body>
-
       <!-- Navigation -->
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -54,99 +34,94 @@
               <li><a href="supportchat.html">Support Chat</a></li>
               <li><a href="settings.html">Settings</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
           </div>
         </div>
       </nav>
-      <!-- Header -->
-      <header class="bg-primary py-5 mb-5">
-//Add a banner
-      </header>
 
-      <!-- Page Content -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 mb-5">
-            <hr>
-            <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
-          </div>
-          <div class="col-md-4 mb-5">
-            <h2>Contact Us</h2>
-            <hr>
-            <address>
-              <strong>CovidConnect</strong>
-              <br>Mayor Street Lower
-              <br>IFSC
-              <br>Dublin
-              <br>
-            </address>
-            <address>
-              <abbr title="Phone">P:</abbr>
-              (085) 211 3223
-              <br>
-              <abbr title="Email">E:</abbr>
-              <a href="mailto:#">convidconnect@convidconnect.com</a>
-            </address>
-          </div>
-        </div>
-        <!-- /.row -->
-        <div class="row">
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top" src="../chat.png" alt="Chat Logo">
-              <div class="card-body">
-                <h4 class="card-title">Chat!</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top" src="../chatroulette.png" alt="chatroulette Logo">
-              <div class="card-body">
-                <h4 class="card-title">Chat Roulette!</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top" src="../connect.png" alt="Chat Logo">
-              <div class="card-body">
-                <h4 class="card-title">Connect Now</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- /.row -->
+     <body>
 
-      </div>
-      <!-- /.container -->
+     <div class="container-fluid">
+       <div class="row content">
+         <div class="col-sm-3 sidenav">
+           <h4>Settings</h4>
+           <br>
+           <ul class="nav nav-pills nav-stacked">
+             <div class="input-group">
+               <input type="text" class="form-control" placeholder="Search Settings..">
+               <span class="input-group-btn">
+                 <button class="btn btn-default" type="button">
+                   <span class="glyphicon glyphicon-search"></span>
+                 </button>
+               </span>
+             </div>
+             <li class="active"><a href="#section1">Account Settings</a></li>
+             <li><a href="#section2">Privacy Settings</a></li>
+             <li><a href="#section3">Billing Settings</a></li>
+             <li><a href="#section3">Notifications Settings</a></li>
+           </ul><br>
+         </div>
+         <div class="col-sm-9">
+           <h4><small>RECENT POSTS</small></h4>
+           <hr>
+           <h2>I Love Food</h2>
+           <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
+           <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
+           <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+           <br><br>
 
-      <!-- Footer -->
-      <footer class="py-5 bg-dark">
-        <div class="container">
-          <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-        </div>
-        <!-- /.container -->
-      </footer>
+           <h4><small>RECENT POSTS</small></h4>
+           <hr>
+           <h2>Officially Blogging</h2>
+           <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
+           <h5><span class="label label-success">Lorem</span></h5><br>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+           <hr>
 
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+           <h4>Leave a Comment:</h4>
+           <form role="form">
+             <div class="form-group">
+               <textarea class="form-control" rows="3" required></textarea>
+             </div>
+             <button type="submit" class="btn btn-success">Submit</button>
+           </form>
+           <br><br>
 
-    </body>
+           <p><span class="badge">2</span> Comments:</p><br>
 
-    </html>
+           <div class="row">
+             <div class="col-sm-2 text-center">
+               <img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+             </div>
+             <div class="col-sm-10">
+               <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
+               <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <br>
+             </div>
+             <div class="col-sm-2 text-center">
+               <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+             </div>
+             <div class="col-sm-10">
+               <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
+               <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <br>
+               <p><span class="badge">1</span> Comment:</p><br>
+               <div class="row">
+                 <div class="col-sm-2 text-center">
+                   <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+                 </div>
+                 <div class="col-xs-10">
+                   <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
+                   <p>Me too! WOW!</p>
+                   <br>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+     <footer class="container-fluid text-center">
+       <p>Covid Connect Footer</p>
+     </footer>
+   </body>
+</html>
