--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -14,6 +14,11 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="#">Covid Connect</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -40,6 +45,7 @@
           <p><a href="#">Link</a></p>
         </div>
         <div class="col-sm-8 text-left">
+          <hr>
           <h1>Profile Page</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <hr>
@@ -56,10 +62,11 @@
         </div>
         </div>
        </div>
-       <div class="container">
-        <h1>profile</h1>
+       <div class="col-sm" >
+       <div class="rows">
 
-      </div>
+       </div>
+
 
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
